--- a/index.html
+++ b/index.html
@@ -148,7 +148,13 @@
 
     <section id="equipo">
       <h2>Nuestro equipo</h2>
-      <p>Contamos con profesionales especializados con amplia trayectoria, orientados a ofrecer soluciones efectivas. Nos caracterizamos por la atención cercana, el estudio detallado de cada caso y la ética como principio rector de nuestra labor jurídica.</p>
+      <p>En <strong>Cáceres Álvarez Abogados</strong> contamos con más de 
+    <strong>25 años de experiencia</strong> brindando asesoría jurídica integral 
+    a empresas, instituciones y personas. Nuestro compromiso se basa en la 
+    transparencia, la ética profesional y la defensa de los intereses de 
+    nuestros clientes. A lo largo de estas décadas hemos construido una 
+    trayectoria sólida que nos permite ofrecer soluciones legales eficaces, 
+    confiables y adaptadas a cada necesidad.</p>
     </section>
     
     <section id="faq">
@@ -173,7 +179,7 @@
       <p>Teléfono: +595 971 872841 - +595 872842</p>
       <p>Dirección: Hernandarias y Felix Perez Cardozo, Lambaré</p>
 
-      <form action="https://formsubmit.co/caceresalvarezabogadod@gmail.com" method="POST" aria-label="Formulario de contacto">
+      <form action="https://formsubmit.co/caceresalvarezabogados@gmail.com" method="POST" aria-label="Formulario de contacto">
     <label for="nombre">Nombre:</label>
     <input type="text" id="nombre" name="nombre" required />
 
@@ -240,4 +246,5 @@
   </script>
   <script src="script.js"></script>
 </body>
+
 </html>
