--- a/index.html
+++ b/index.html
@@ -15,19 +15,10 @@
   <div class="overlay">
     <div class="contenedor-header">
       <div class="logo">
-        <!-- mantené tu SVG aquí -->
-        <svg width="80" height="80" viewBox="0 0 400 400" xmlns="http://www.w3.org/2000/svg" aria-label="Logo">
-        <rect width="400" height="400" fill="#0F2630"/>
-        <polygon points="200,80 110,130 290,130" fill="#F4E9C6"/>
-        <rect x="120" y="130" width="20" height="120" fill="#F4E9C6"/>
-        <rect x="190" y="130" width="20" height="120" fill="#F4E9C6"/>
-        <rect x="260" y="130" width="20" height="120" fill="#F4E9C6"/>
-        <rect x="110" y="250" width="180" height="15" fill="#F4E9C6"/>
-      </svg>
-        <svg width="80" height="80" viewBox="0 0 400 400" xmlns="http://www.w3.org/2000/svg" aria-label="Logo">
-          <!-- logo -->
-        </svg>
-        <div>
+  <img src="logo-caceres.png" alt="Cáceres Álvarez Abogados">
+  <p class="since">Since 1999</p>
+</div>
+
           <h1>Cáceres Álvarez y Asociados</h1>
           <p>Estudio Jurídico</p>
         </div>
@@ -248,3 +239,4 @@
 </body>
 
 </html>
+
