--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="overlay">
     <div class="contenedor-header">
       <div class="logo">
-  <img src="logo-caceres.png" alt="Cáceres Álvarez Abogados">
+  <img src="logo.jepg" alt="Cáceres Álvarez Abogados">
   <p class="since">Since 1999</p>
 </div>
 
@@ -239,4 +239,5 @@
 </body>
 
 </html>
+
 
