--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <header class="hero-header">
   <div class="overlay">
     <div class="contenedor-header">
-      <div class="logo">
+      <div class="logo-mini">
   <img src="logo.jpeg" alt="Cáceres Álvarez Abogados">
   <p class="since">Since 1999</p>
 </div>
@@ -239,6 +239,7 @@
 </body>
 
 </html>
+
 
 
 
