--- a/index.html
+++ b/index.html
@@ -2,30 +2,26 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="description" content="Estudio jurídico en Asunción especializado en derecho civil, penal, laboral y más. Consultas online y presencial.">
-  <meta name="keywords" content="abogados, estudio jurídico, derecho civil, penal, laboral, Paraguay, Asunción">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cáceres Álvarez - Abogados</title>
-
-  <!-- Fuentes y estilos -->
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Cáceres Álvarez — Abogados</title>
+  <meta name="description" content="Estudio jurídico con más de 25 años de experiencia. Derecho civil, penal, laboral y más. Atención en Asunción y online." />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="estilos.css" />
-
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" />
 </head>
 <body>
 
-  <!-- Barra superior -->
+  <!-- Topbar -->
   <header class="topbar">
     <div class="wrap">
-      <a href="#hero" class="brand" aria-label="Ir al inicio">Cáceres Álvarez Abogados</a>
+      <a href="#hero" class="brand" aria-label="Ir al inicio">CÁCERES ÁLVAREZ</a>
 
       <button class="nav-toggle" aria-label="Abrir menú" aria-expanded="false">
         <span></span><span></span><span></span>
       </button>
 
       <nav class="nav" aria-label="Navegación principal">
-        <a href="#sobre">Sobre nosotros</a>
+        <a href="#sobre">Sobre</a>
         <a href="#mvv">Misión y visión</a>
         <a href="#servicios">Áreas</a>
         <a href="#equipo">Equipo</a>
@@ -34,11 +30,10 @@
     </div>
   </header>
 
-  <!-- HERO -->
-  <section id="hero" class="hero-header" role="banner" aria-label="Portada del sitio">
+  <!-- Hero -->
+  <section id="hero" class="hero" role="banner" aria-label="Portada del sitio">
     <div class="overlay">
       <div class="hero-content">
-        <!-- LOGO grande (sin H1) -->
         <div class="logo-hero" aria-label="Logo Cáceres Álvarez Abogados">
           <img src="logo.jpeg" alt="Cáceres Álvarez Abogados">
         </div>
@@ -46,8 +41,8 @@
 
         <h2 class="tagline">Comprometidos con tu justicia</h2>
         <div class="cta-row">
-          <a href="#contacto" class="btn btn-primary">Solicitá una consulta</a>
-          <a href="#servicios" class="btn btn-ghost">Conocé nuestras áreas</a>
+          <a class="btn btn-primary" href="#contacto">Solicitá una consulta</a>
+          <a class="btn btn-ghost" href="#servicios">Conocé nuestras áreas</a>
         </div>
       </div>
     </div>
@@ -55,33 +50,32 @@
 
   <main>
 
-    <!-- SOBRE -->
+    <!-- Sobre -->
     <section id="sobre" class="section">
       <div class="wrap narrow">
         <h3>Sobre nosotros</h3>
         <p>
           En <strong>Cáceres Álvarez Abogados</strong> contamos con más de
           <strong>25 años de experiencia</strong> brindando asesoría jurídica integral
-          a empresas, instituciones y personas. Nuestro compromiso se basa en la
+          a empresas, instituciones y personas. Nuestro trabajo se apoya en la
           transparencia, la ética profesional y la defensa de los intereses de
-          nuestros clientes. Ofrecemos soluciones legales eficaces, confiables y
-          adaptadas a cada necesidad.
+          nuestros clientes, ofreciendo soluciones eficaces y a medida.
         </p>
       </div>
     </section>
 
-    <!-- MISIÓN / VISIÓN / VALORES -->
+    <!-- Misión / Visión / Valores -->
     <section id="mvv" class="section soft">
       <div class="wrap">
         <h3>Misión, Visión y Valores</h3>
         <div class="grid-3">
           <article class="panel">
             <h4>Misión</h4>
-            <p>Brindar asesoramiento y representación legal con excelencia, compromiso ético y enfoque humano, buscando soluciones efectivas para cada cliente.</p>
+            <p>Asesorar y representar con excelencia, compromiso ético y enfoque humano, buscando resultados concretos para cada cliente.</p>
           </article>
           <article class="panel">
             <h4>Visión</h4>
-            <p>Ser un estudio jurídico de referencia en Paraguay, reconocido por la confianza, la calidad del servicio y el impacto positivo en la comunidad.</p>
+            <p>Ser un estudio jurídico de referencia en Paraguay, reconocido por la confianza, la calidad y el impacto positivo en la comunidad.</p>
           </article>
           <article class="panel">
             <h4>Valores</h4>
@@ -97,7 +91,7 @@
       </div>
     </section>
 
-    <!-- SERVICIOS -->
+    <!-- Áreas -->
     <section id="servicios" class="section">
       <div class="wrap">
         <h3>Áreas de práctica</h3>
@@ -121,21 +115,21 @@
           <article class="card" tabindex="0" aria-expanded="false">
             <h5>Derecho Laboral</h5>
             <div class="detalle" hidden>
-              <p>Consultoría para empleadores y trabajadores. Contratos, reclamaciones y resolución de conflictos.</p>
+              <p>Consultoría a empleadores y trabajadores. Contratos, reclamaciones y resolución de conflictos.</p>
             </div>
           </article>
 
           <article class="card" tabindex="0" aria-expanded="false">
             <h5>Derecho Comercial</h5>
             <div class="detalle" hidden>
-              <p>Contratos comerciales, sociedades, fusiones y asesoría integral a empresas.</p>
+              <p>Contratos, sociedades, fusiones y asesoría integral a empresas.</p>
             </div>
           </article>
 
           <article class="card" tabindex="0" aria-expanded="false">
             <h5>Propiedad Intelectual</h5>
             <div class="detalle" hidden>
-              <p>Registro y protección de marcas, patentes, derechos de autor y defensa de activos intangibles.</p>
+              <p>Registro y protección de marcas, patentes y derechos de autor. Defensa de activos intangibles.</p>
             </div>
           </article>
 
@@ -149,15 +143,11 @@
       </div>
     </section>
 
-    <!-- EQUIPO -->
+    <!-- Equipo -->
     <section id="equipo" class="section soft">
       <div class="wrap narrow">
         <h3>Nuestro equipo</h3>
-        <p>
-          Combinamos rigurosidad técnica y criterio práctico para lograr resultados
-          concretos. Defendemos con compromiso los intereses de quienes confían en
-          nosotros.
-        </p>
+        <p>Combinamos rigor técnico y criterio práctico para lograr resultados. Defendemos con compromiso los intereses de quienes confían en nosotros.</p>
       </div>
     </section>
 
@@ -175,12 +165,12 @@
         </details>
         <details>
           <summary>¿Qué documentos necesito para una consulta?</summary>
-          <p>Depende del caso, recomendamos traer cédula, contratos o resoluciones relacionadas.</p>
+          <p>Depende del caso; recomendamos traer cédula, contratos o resoluciones relacionadas.</p>
         </details>
       </div>
     </section>
 
-    <!-- CONTACTO -->
+    <!-- Contacto -->
     <section id="contacto" class="section contact">
       <div class="wrap">
         <h3>Contacto</h3>
@@ -211,7 +201,6 @@
               <input type="hidden" name="_template" value="table">
               <input type="hidden" name="_captcha" value="false">
               <input type="hidden" name="_next" value="gracias.html">
-
               <input type="text" name="_honey" style="display:none">
 
               <button type="submit" class="btn btn-primary">Enviar consulta</button>
@@ -230,11 +219,11 @@
 
   </main>
 
-  <!-- FOOTER con logo imagen -->
+  <!-- Footer (bajísimo contraste) -->
   <footer class="footer">
     <div class="wrap">
       <div class="footer-brand">
-        <img src="8c5a1d94-c491-4745-9c88-39c98cd686d0.jpg" alt="Cáceres Álvarez Abogados">
+        <img src="footer-logo.jpg" alt="Cáceres Álvarez Abogados">
       </div>
       <p class="copy">© 2025 Cáceres Álvarez Abogados. Todos los derechos reservados.</p>
     </div>
