--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
   <footer class="footer">
     <div class="wrap">
       <div class="footer-brand">
-        <img src="footer-logo.jpg" alt="Cáceres Álvarez Abogados">
+        <img src="8c5a1d94-c491-4745-9c88-39c98cd686d0.jpg" alt="Cáceres Álvarez Abogados">
       </div>
       <p class="copy">© 2025 Cáceres Álvarez Abogados. Todos los derechos reservados.</p>
     </div>
@@ -235,6 +235,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
